--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "fs": "0.0.1-security",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "rehype-stringify": "^4.0.0",
+    "remark-parse": "^6.0.1",
+    "remark-rehype": "^3.0.1",
+    "unified": "^7.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
