--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "private": true,
   "dependencies": {
     "fs": "0.0.1-security",
+    "github-slugger": "^1.2.0",
+    "lodash": "^4.17.11",
+    "mdast-util-to-string": "^1.0.5",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-router-dom": "^4.3.1",
+    "react-router-hash-link": "^1.2.0",
     "react-scripts": "2.0.5",
     "rehype-stringify": "^4.0.0",
+    "remark": "^10.0.0",
     "remark-parse": "^6.0.1",
     "remark-rehype": "^3.0.1",
-    "unified": "^7.0.0"
+    "remark-slug": "^5.1.0",
+    "unified": "^7.0.0",
+    "unist-util-visit": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
