デプロイ時の環境変数設定

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "react-scripts build && gh-pages -d build"
+    "deploy": "PUBLIC_URL=https://takumon.github.io/react-markdown-sync-toc/ react-scripts build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
